--- a/socialMedia-app/src/components/Sidebar/Sidebar.css
+++ b/socialMedia-app/src/components/Sidebar/Sidebar.css
@@ -8,5 +8,6 @@
 
 ::-webkit-scrollbar-thumb {
     background-color: #424242;
-    border-radius: 5px;
+    border-radius: 1rem;
+    /* height: 5px; */
 }
