--- a/socialMedia-app/src/index.css
+++ b/socialMedia-app/src/index.css
@@ -7,5 +7,6 @@
 body {
     font-family: "Poppins", sans-serif;
     background-color: rgba(0, 0, 0, 0.9);
+    /* background-color: black; */
     color: rgba(255, 255, 255, 1);
 }
